--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "my-driving-school-app-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
